Bug 137798 - EDITING Text anchor settings have no effect in Writer textframes
Summary: EDITING Text anchor settings have no effect in Writer textframes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Attila Bakos (NISZ)
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Shape-Textbox
  Show dependency treegraph
 
Reported: 2020-10-27 12:08 UTC by NISZ LibreOffice Team
Modified: 2020-11-18 09:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (11.44 KB, application/vnd.oasis.opendocument.text)
2020-10-27 12:08 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer – applying settings here has no effect (43.43 KB, image/png)
2020-10-27 12:09 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-27 12:08:48 UTC
Created attachment 166771 [details]
Example file from Writer

Attached document contains some shapes with text on them and a similar shape with textframes added.
In the Format – Text Box and Shape – Text Attributes dialog the Text anchor was changed for the left three shapes to top left – center – bottom right, this works.
The same settings are however ineffective for the textframes text, it stays top left regardless any setting made in the dialog.

Steps to reproduce:
    1. Open attached document
    2. Select the top left shape, open Format – Text Box and Shape – Text Attributes dialog 
    3. In the Text Anchor widget choose any alignment and press OK. Text alignment changes as selected.
    4. Select the top right shape, do the same as above.
       
Actual results:
Text alignment does not change.

Expected results:
Text alignment changes as selected.

LibreOffice details:
Version: 7.1.0.0.alpha1+ (x64)
Build ID: b61bf7c7cfcf97a5ade6d130873af146670bc2ee
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-10-27 12:09:04 UTC
Created attachment 166772 [details]
Screenshot of the problem in Writer – applying settings here has no effect
Comment 2 Commit Notification 2020-10-28 18:42:24 UTC
Attila Bakos (NISZ) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b5801fc2c768d1774957c2c122c9061d3a74756

tdf#137798 sw: apply textbox Text alignment

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-11-18 09:33:42 UTC
Verified in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: 72056f39e01e36afac36c62988331b6813c8214f
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!