tdf#137798 sw: apply textbox Text alignment

set in "Text" dialog window using "Text Anchor"
in Format -> Text Box and Shape -> Text
attributes... on the selected text box.

Follow up of commit 726c911b90b9a3170fa6b3a34bb952a8d2dbe148
(tdf#137025 sw: apply textbox padding set in Text).

Change-Id: I8c575ceb1d0b0772c1f7d99dc746531b0cd7ceb4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104632
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>